<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CaiZi</string>
    <string name="action_settings">游戏帮助</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_title">猜数字游戏</string>
    <string name="create">生成一个四位数</string>
    <string name="hint">在这里输入你的答案</string>
    <string name="level">游戏难度</string>
    <string name="easy">简单</string>
    <string name="common">一般</string>
    <string name="hard">困难</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	<string name="init">""</string>
	<string name="ok">开始猜吧！</string>
	<string name="help">游戏帮助：用户打开游戏之后，首先点击生成一个四位数，没有生成四位数之前是不可以点击开始猜按钮的，
	    生成的四位数每一位是不重复的，如4321，然后用户输入一个四位数之后就可以开始猜了。用户可以按菜单键查看帮助和答案。
	    游戏规则：假如生成的四位数字就是4321，4处于第1位, 3处于第2位, 2处于第3位, 1处于第4位. 玩家猜一个四位数字.如果某个数
	    字和顺序都正确,则记为一个A,如果数字正确,顺序不对,则记为一个B.用户每猜一次，系统都会输出几个A几个B，例如:玩家猜1357.
	    这里的1,数字正确,顺序不对, 记一个B, 3数字和顺序都正确,记一个A. 5和7数字不对,忽略. 所以为结果为1A1B.输出结果的格式是：
	    “猜------->结果”。下面是对4321猜测的示例，仅供参考：1357------->1A1B，1234 ------->0A4B，0987------->0A0B，
		4325------->3A0B，玩家共有8次机会,每猜一次,程序显示猜测结果.8次之内猜中玩家胜,否则玩家败。</string>
</resources>
