<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:textSize="23sp"
            android:textColor="#000"
            android:text="@string/app_title"/>
        <Button
            android:id="@+id/creatnum"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="#f00"
            android:onClick="create"
            android:text="@string/create"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

    <EditText
        android:id="@+id/answer"
        android:hint="@string/hint"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:text="@string/init"
        android:gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout 
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/one"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:onClick="doClick"
                android:text="@string/one"/>
            <Button
                android:id="@+id/two"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:onClick="doClick"
                android:text="@string/two"/>
            <Button
                android:id="@+id/three"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:onClick="doClick"
                android:text="@string/three"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/four"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:onClick="doClick"
                android:text="@string/four"/>
            <Button
                android:id="@+id/five"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:onClick="doClick"
                android:text="@string/five"/>
            <Button
                android:id="@+id/six"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:onClick="doClick"
                android:text="@string/six"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/seven"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:onClick="doClick"
                android:text="@string/seven"/>
            <Button
                android:id="@+id/eight"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:onClick="doClick"
                android:text="@string/eight"/>
            <Button
                android:id="@+id/nine"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:onClick="doClick"
                android:text="@string/nine"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/zero"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:onClick="doClick"
                android:text="@string/zero"/>
            <Button
                android:id="@+id/ok"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:onClick="doOk"
                android:enabled="false"
                android:text="@string/ok"/>
        </LinearLayout>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">
        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textIsSelectable="false"
            android:text="@string/init"
            android:gravity="center_horizontal"/>
    </LinearLayout>
        <ScrollView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="90dp">
	        <TextView
	            android:id="@+id/info"
	            android:layout_marginLeft="90dp"
	            android:layout_width="160dp"
	            android:maxLines="4"
	            android:textSize="20sp"
	            android:layout_height="wrap_content"
	            android:textIsSelectable="false"
	            android:singleLine="false"/>
	        </ScrollView>
</LinearLayout>